--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==3.2.9
 django-allauth==0.51.0
 django-bootstrap-form==3.4
 django-crispy-forms==1.13.0
+django-compressor==4.3.1
 django-extensions==3.1.5
 django-template-repl==0.3.0
 django-widget-tweaks==1.4.9
